Window Forensic CTF Updates

--- a/05. Windows Forensic CTF.md
+++ b/05. Windows Forensic CTF.md
@@ -6,7 +6,7 @@ This CTF is designed to be completed on your own VM or host. The TryHackMe room 
 
 [](https://tryhackme.com/jr/windowsendpointforensicsctf)
 
-[Kape-Out.zip](Exercises/Kape-Out-CTF.zip)
+[Kape-Out-CTF.7z](Exercises/Kape_Out.7z)
 
 ## Scenario
 
